category:add violin section

--- a/index.html
+++ b/index.html
@@ -407,6 +407,235 @@
 
       </div>
 
+
+    </section>
+    <section class="container-fluid p-lg-5 bg-light product-section">
+      <div class="product-heading">
+        <a href="#">
+          <h2 class="grey font-weight-bolder text-center border-bottom m-3">Violin</h2>
+        </a>
+        <p class="font-weight-bold red">Grand, Upright, Electronic</p>
+      </div>
+      <div class="product-grid">
+        <div class="product-card position-relative bg-product">
+          <div class="product-img-container position-relative">
+            <a href="#"><img src="./assets/violins/violin1.jpg" class="product-img" alt="piano photo"></a>
+            <a href="#">
+              <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4 op-9">New</span>
+              <span class="bottom right small position-absolute p-2 rounded bg-red text-light px-4 op-9">Paris</span>
+            </a>
+          </div>
+          <div class="product-card-bottom">
+            <div>
+              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
+              <p class="pl-3">A beautiful simple violin From Paris</p>
+            </div>
+            <div class="add-svg-container d-flex justify-content-between mt-3">
+              <a href="#">
+                <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
+                  <path class="add-svg-path"
+                    d="M 8 1 C 4.139959 1 1.0000428 4.1398846 1 8 C 0.99997942 11.860115 4.1399146 15 8 15 C 11.860086 15 15.00002 11.860115 15 8 C 14.999957 4.1398846 11.860041 1 8 1 z M 8 2 C 11.319604 2 13.999963 4.6803455 14 8 C 14.000018 11.319654 11.319644 14 8 14 C 4.6803565 14 1.9980292 11.319654 1.9980469 8 C 1.9980837 4.6803455 4.6803952 2 8 2 z M 7.9863281 4.0039062 A 0.50005001 0.50005001 0 0 0 7.4941406 4.5117188 L 7.5 7.5039062 L 4.5039062 7.5097656 A 0.50095123 0.50095123 0 0 0 4.5058594 8.5117188 L 7.5 8.5058594 L 7.5058594 11.5 A 0.50005001 0.50005001 0 1 0 8.5058594 11.5 L 8.5019531 8.5039062 L 11.494141 8.4980469 A 0.50005001 0.50005001 0 1 0 11.492188 7.4980469 L 8.5 7.5039062 L 8.4960938 4.5117188 A 0.50005001 0.50005001 0 0 0 7.9863281 4.0058594 L 7.9863281 4.0039062 z " />
+                </svg>
+              </a>
+              <a href="#">
+                <p class="price bg-charcoal text-light align-self-center">250$</p>
+              </a>
+            </div>
+
+          </div>
+        </div>
+        <div class="product-card position-relative bg-product">
+          <div class="product-img-container position-relative">
+            <a href="#"><img src="./assets/violins/violin1.jpg" class="product-img" alt="piano photo"></a>
+            <a href="#">
+              <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4 op-9">New</span>
+              <span class="bottom right small position-absolute p-2 rounded bg-red text-light px-4 op-9">Paris</span>
+            </a>
+          </div>
+          <div class="product-card-bottom">
+            <div>
+              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
+              <p class="pl-3">A beautiful simple violin From Paris</p>
+            </div>
+            <div class="add-svg-container d-flex justify-content-between mt-3">
+              <a href="#">
+                <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
+                  <path class="add-svg-path"
+                    d="M 8 1 C 4.139959 1 1.0000428 4.1398846 1 8 C 0.99997942 11.860115 4.1399146 15 8 15 C 11.860086 15 15.00002 11.860115 15 8 C 14.999957 4.1398846 11.860041 1 8 1 z M 8 2 C 11.319604 2 13.999963 4.6803455 14 8 C 14.000018 11.319654 11.319644 14 8 14 C 4.6803565 14 1.9980292 11.319654 1.9980469 8 C 1.9980837 4.6803455 4.6803952 2 8 2 z M 7.9863281 4.0039062 A 0.50005001 0.50005001 0 0 0 7.4941406 4.5117188 L 7.5 7.5039062 L 4.5039062 7.5097656 A 0.50095123 0.50095123 0 0 0 4.5058594 8.5117188 L 7.5 8.5058594 L 7.5058594 11.5 A 0.50005001 0.50005001 0 1 0 8.5058594 11.5 L 8.5019531 8.5039062 L 11.494141 8.4980469 A 0.50005001 0.50005001 0 1 0 11.492188 7.4980469 L 8.5 7.5039062 L 8.4960938 4.5117188 A 0.50005001 0.50005001 0 0 0 7.9863281 4.0058594 L 7.9863281 4.0039062 z " />
+                </svg>
+              </a>
+              <a href="#">
+                <p class="price bg-charcoal text-light align-self-center">250$</p>
+              </a>
+            </div>
+
+          </div>
+        </div>
+        <div class="product-card position-relative bg-product">
+          <div class="product-img-container position-relative">
+            <a href="#"><img src="./assets/violins/violin1.jpg" class="product-img" alt="piano photo"></a>
+            <a href="#">
+              <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4 op-9">New</span>
+              <span class="bottom right small position-absolute p-2 rounded bg-red text-light px-4 op-9">Paris</span>
+            </a>
+          </div>
+          <div class="product-card-bottom">
+            <div>
+              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
+              <p class="pl-3">A beautiful simple violin From Paris</p>
+            </div>
+            <div class="add-svg-container d-flex justify-content-between mt-3">
+              <a href="#">
+                <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
+                  <path class="add-svg-path"
+                    d="M 8 1 C 4.139959 1 1.0000428 4.1398846 1 8 C 0.99997942 11.860115 4.1399146 15 8 15 C 11.860086 15 15.00002 11.860115 15 8 C 14.999957 4.1398846 11.860041 1 8 1 z M 8 2 C 11.319604 2 13.999963 4.6803455 14 8 C 14.000018 11.319654 11.319644 14 8 14 C 4.6803565 14 1.9980292 11.319654 1.9980469 8 C 1.9980837 4.6803455 4.6803952 2 8 2 z M 7.9863281 4.0039062 A 0.50005001 0.50005001 0 0 0 7.4941406 4.5117188 L 7.5 7.5039062 L 4.5039062 7.5097656 A 0.50095123 0.50095123 0 0 0 4.5058594 8.5117188 L 7.5 8.5058594 L 7.5058594 11.5 A 0.50005001 0.50005001 0 1 0 8.5058594 11.5 L 8.5019531 8.5039062 L 11.494141 8.4980469 A 0.50005001 0.50005001 0 1 0 11.492188 7.4980469 L 8.5 7.5039062 L 8.4960938 4.5117188 A 0.50005001 0.50005001 0 0 0 7.9863281 4.0058594 L 7.9863281 4.0039062 z " />
+                </svg>
+              </a>
+              <a href="#">
+                <p class="price bg-charcoal text-light align-self-center">250$</p>
+              </a>
+            </div>
+
+          </div>
+        </div>
+        <div class="product-card position-relative bg-product">
+          <div class="product-img-container position-relative">
+            <a href="#"><img src="./assets/violins/violin1.jpg" class="product-img" alt="piano photo"></a>
+            <a href="#">
+              <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4 op-9">New</span>
+              <span class="bottom right small position-absolute p-2 rounded bg-red text-light px-4 op-9">Paris</span>
+            </a>
+          </div>
+          <div class="product-card-bottom">
+            <div>
+              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
+              <p class="pl-3">A beautiful simple violin From Paris</p>
+            </div>
+            <div class="add-svg-container d-flex justify-content-between mt-3">
+              <a href="#">
+                <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
+                  <path class="add-svg-path"
+                    d="M 8 1 C 4.139959 1 1.0000428 4.1398846 1 8 C 0.99997942 11.860115 4.1399146 15 8 15 C 11.860086 15 15.00002 11.860115 15 8 C 14.999957 4.1398846 11.860041 1 8 1 z M 8 2 C 11.319604 2 13.999963 4.6803455 14 8 C 14.000018 11.319654 11.319644 14 8 14 C 4.6803565 14 1.9980292 11.319654 1.9980469 8 C 1.9980837 4.6803455 4.6803952 2 8 2 z M 7.9863281 4.0039062 A 0.50005001 0.50005001 0 0 0 7.4941406 4.5117188 L 7.5 7.5039062 L 4.5039062 7.5097656 A 0.50095123 0.50095123 0 0 0 4.5058594 8.5117188 L 7.5 8.5058594 L 7.5058594 11.5 A 0.50005001 0.50005001 0 1 0 8.5058594 11.5 L 8.5019531 8.5039062 L 11.494141 8.4980469 A 0.50005001 0.50005001 0 1 0 11.492188 7.4980469 L 8.5 7.5039062 L 8.4960938 4.5117188 A 0.50005001 0.50005001 0 0 0 7.9863281 4.0058594 L 7.9863281 4.0039062 z " />
+                </svg>
+              </a>
+              <a href="#">
+                <p class="price bg-charcoal text-light align-self-center">250$</p>
+              </a>
+            </div>
+
+          </div>
+        </div>
+        <div class="product-card position-relative bg-product">
+          <div class="product-img-container position-relative">
+            <a href="#"><img src="./assets/violins/violin1.jpg" class="product-img" alt="piano photo"></a>
+            <a href="#">
+              <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4 op-9">New</span>
+              <span class="bottom right small position-absolute p-2 rounded bg-red text-light px-4 op-9">Paris</span>
+            </a>
+          </div>
+          <div class="product-card-bottom">
+            <div>
+              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
+              <p class="pl-3">A beautiful simple violin From Paris</p>
+            </div>
+            <div class="add-svg-container d-flex justify-content-between mt-3">
+              <a href="#">
+                <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
+                  <path class="add-svg-path"
+                    d="M 8 1 C 4.139959 1 1.0000428 4.1398846 1 8 C 0.99997942 11.860115 4.1399146 15 8 15 C 11.860086 15 15.00002 11.860115 15 8 C 14.999957 4.1398846 11.860041 1 8 1 z M 8 2 C 11.319604 2 13.999963 4.6803455 14 8 C 14.000018 11.319654 11.319644 14 8 14 C 4.6803565 14 1.9980292 11.319654 1.9980469 8 C 1.9980837 4.6803455 4.6803952 2 8 2 z M 7.9863281 4.0039062 A 0.50005001 0.50005001 0 0 0 7.4941406 4.5117188 L 7.5 7.5039062 L 4.5039062 7.5097656 A 0.50095123 0.50095123 0 0 0 4.5058594 8.5117188 L 7.5 8.5058594 L 7.5058594 11.5 A 0.50005001 0.50005001 0 1 0 8.5058594 11.5 L 8.5019531 8.5039062 L 11.494141 8.4980469 A 0.50005001 0.50005001 0 1 0 11.492188 7.4980469 L 8.5 7.5039062 L 8.4960938 4.5117188 A 0.50005001 0.50005001 0 0 0 7.9863281 4.0058594 L 7.9863281 4.0039062 z " />
+                </svg>
+              </a>
+              <a href="#">
+                <p class="price bg-charcoal text-light align-self-center">250$</p>
+              </a>
+            </div>
+
+          </div>
+        </div>
+        <div class="product-card position-relative bg-product">
+          <div class="product-img-container position-relative">
+            <a href="#"><img src="./assets/violins/violin1.jpg" class="product-img" alt="piano photo"></a>
+            <a href="#">
+              <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4 op-9">New</span>
+              <span class="bottom right small position-absolute p-2 rounded bg-red text-light px-4 op-9">Paris</span>
+            </a>
+          </div>
+          <div class="product-card-bottom">
+            <div>
+              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
+              <p class="pl-3">A beautiful simple violin From Paris</p>
+            </div>
+            <div class="add-svg-container d-flex justify-content-between mt-3">
+              <a href="#">
+                <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
+                  <path class="add-svg-path"
+                    d="M 8 1 C 4.139959 1 1.0000428 4.1398846 1 8 C 0.99997942 11.860115 4.1399146 15 8 15 C 11.860086 15 15.00002 11.860115 15 8 C 14.999957 4.1398846 11.860041 1 8 1 z M 8 2 C 11.319604 2 13.999963 4.6803455 14 8 C 14.000018 11.319654 11.319644 14 8 14 C 4.6803565 14 1.9980292 11.319654 1.9980469 8 C 1.9980837 4.6803455 4.6803952 2 8 2 z M 7.9863281 4.0039062 A 0.50005001 0.50005001 0 0 0 7.4941406 4.5117188 L 7.5 7.5039062 L 4.5039062 7.5097656 A 0.50095123 0.50095123 0 0 0 4.5058594 8.5117188 L 7.5 8.5058594 L 7.5058594 11.5 A 0.50005001 0.50005001 0 1 0 8.5058594 11.5 L 8.5019531 8.5039062 L 11.494141 8.4980469 A 0.50005001 0.50005001 0 1 0 11.492188 7.4980469 L 8.5 7.5039062 L 8.4960938 4.5117188 A 0.50005001 0.50005001 0 0 0 7.9863281 4.0058594 L 7.9863281 4.0039062 z " />
+                </svg>
+              </a>
+              <a href="#">
+                <p class="price bg-charcoal text-light align-self-center">250$</p>
+              </a>
+            </div>
+
+          </div>
+        </div>
+        <div class="product-card position-relative bg-product">
+          <div class="product-img-container position-relative">
+            <a href="#"><img src="./assets/violins/violin1.jpg" class="product-img" alt="piano photo"></a>
+            <a href="#">
+              <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4 op-9">New</span>
+              <span class="bottom right small position-absolute p-2 rounded bg-red text-light px-4 op-9">Paris</span>
+            </a>
+          </div>
+          <div class="product-card-bottom">
+            <div>
+              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
+              <p class="pl-3">A beautiful simple violin From Paris</p>
+            </div>
+            <div class="add-svg-container d-flex justify-content-between mt-3">
+              <a href="#">
+                <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
+                  <path class="add-svg-path"
+                    d="M 8 1 C 4.139959 1 1.0000428 4.1398846 1 8 C 0.99997942 11.860115 4.1399146 15 8 15 C 11.860086 15 15.00002 11.860115 15 8 C 14.999957 4.1398846 11.860041 1 8 1 z M 8 2 C 11.319604 2 13.999963 4.6803455 14 8 C 14.000018 11.319654 11.319644 14 8 14 C 4.6803565 14 1.9980292 11.319654 1.9980469 8 C 1.9980837 4.6803455 4.6803952 2 8 2 z M 7.9863281 4.0039062 A 0.50005001 0.50005001 0 0 0 7.4941406 4.5117188 L 7.5 7.5039062 L 4.5039062 7.5097656 A 0.50095123 0.50095123 0 0 0 4.5058594 8.5117188 L 7.5 8.5058594 L 7.5058594 11.5 A 0.50005001 0.50005001 0 1 0 8.5058594 11.5 L 8.5019531 8.5039062 L 11.494141 8.4980469 A 0.50005001 0.50005001 0 1 0 11.492188 7.4980469 L 8.5 7.5039062 L 8.4960938 4.5117188 A 0.50005001 0.50005001 0 0 0 7.9863281 4.0058594 L 7.9863281 4.0039062 z " />
+                </svg>
+              </a>
+              <a href="#">
+                <p class="price bg-charcoal text-light align-self-center">250$</p>
+              </a>
+            </div>
+
+          </div>
+        </div>
+        <div class="product-card position-relative bg-product">
+          <div class="product-img-container position-relative">
+            <a href="#"><img src="./assets/violins/violin1.jpg" class="product-img" alt="piano photo"></a>
+            <a href="#">
+              <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4 op-9">New</span>
+              <span class="bottom right small position-absolute p-2 rounded bg-red text-light px-4 op-9">Paris</span>
+            </a>
+          </div>
+          <div class="product-card-bottom">
+            <div>
+              <h6 class="pl-3 red font-weight-bold my-3">Zattix model x-230</h6>
+              <p class="pl-3">A beautiful simple violin From Paris</p>
+            </div>
+            <div class="add-svg-container d-flex justify-content-between mt-3">
+              <a href="#">
+                <svg class="add-svg" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 16 16">
+                  <path class="add-svg-path"
+                    d="M 8 1 C 4.139959 1 1.0000428 4.1398846 1 8 C 0.99997942 11.860115 4.1399146 15 8 15 C 11.860086 15 15.00002 11.860115 15 8 C 14.999957 4.1398846 11.860041 1 8 1 z M 8 2 C 11.319604 2 13.999963 4.6803455 14 8 C 14.000018 11.319654 11.319644 14 8 14 C 4.6803565 14 1.9980292 11.319654 1.9980469 8 C 1.9980837 4.6803455 4.6803952 2 8 2 z M 7.9863281 4.0039062 A 0.50005001 0.50005001 0 0 0 7.4941406 4.5117188 L 7.5 7.5039062 L 4.5039062 7.5097656 A 0.50095123 0.50095123 0 0 0 4.5058594 8.5117188 L 7.5 8.5058594 L 7.5058594 11.5 A 0.50005001 0.50005001 0 1 0 8.5058594 11.5 L 8.5019531 8.5039062 L 11.494141 8.4980469 A 0.50005001 0.50005001 0 1 0 11.492188 7.4980469 L 8.5 7.5039062 L 8.4960938 4.5117188 A 0.50005001 0.50005001 0 0 0 7.9863281 4.0058594 L 7.9863281 4.0039062 z " />
+                </svg>
+              </a>
+              <a href="#">
+                <p class="price bg-charcoal text-light align-self-center">250$</p>
+              </a>
+            </div>
+
+          </div>
+        </div>
+
+
+      </div>
       <!-- pagination from bootstrap -->
       <nav aria-label="Page navigation" class="my-3">
         <ul class="pagination py-4 justify-content-center">
