assets:populate images for drums and the carousel

--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
               <div>
                 <div class="carousel-img">
                   <a href="">
-                    <img src="./assets/piano/miguel-dominguez-5yDL5rOKrUM-unsplash.jpg" alt="picture of piano category"
-                      class="carousel-img">
+                    <img src="./assets/piano/piano-2.jpg" alt="picture of piano category" class="carousel-img">
                   </a>
                 </div>
                 <span class="sr-only">Photo by <a
@@ -146,8 +145,7 @@
           <div class="carousel-item text-center p-lg-3">
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center">
               <div>
-                <img src="./assets/drums/chris-bulilan-4ktLEcM4PuA-unsplash.jpg" alt="picture of piano category"
-                  class="carousel-img">
+                <img src="./assets/violins/violin7.jpg" alt="picture of piano category" class="carousel-img">
                 <span class="sr-only">Photo by chris bulilan</span>
               </div>
               <div class="carousel-texts px-3">
@@ -672,7 +670,7 @@
         </div>
         <div class="product-card position-relative bg-product">
           <div class="product-img-container position-relative">
-            <a href="#"><img src="./assets/drums/drum1.jpg" class="product-img" alt="piano photo"></a>
+            <a href="#"><img src="./assets/drums/drum2.jpg" class="product-img" alt="piano photo"></a>
             <a href="#">
               <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4 op-9">New</span>
               <span class="bottom right small position-absolute p-2 rounded bg-red text-light px-4 op-9">Paris</span>
@@ -698,7 +696,7 @@
         </div>
         <div class="product-card position-relative bg-product">
           <div class="product-img-container position-relative">
-            <a href="#"><img src="./assets/drums/drum1.jpg" class="product-img" alt="piano photo"></a>
+            <a href="#"><img src="./assets/drums/drum3.jpg" class="product-img" alt="piano photo"></a>
             <a href="#">
               <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4 op-9">New</span>
               <span class="bottom right small position-absolute p-2 rounded bg-red text-light px-4 op-9">Paris</span>
@@ -724,7 +722,7 @@
         </div>
         <div class="product-card position-relative bg-product">
           <div class="product-img-container position-relative">
-            <a href="#"><img src="./assets/drums/drum1.jpg" class="product-img" alt="piano photo"></a>
+            <a href="#"><img src="./assets/drums/drum4.jpg" class="product-img" alt="piano photo"></a>
             <a href="#">
               <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4 op-9">New</span>
               <span class="bottom right small position-absolute p-2 rounded bg-red text-light px-4 op-9">Paris</span>
@@ -750,7 +748,7 @@
         </div>
         <div class="product-card position-relative bg-product">
           <div class="product-img-container position-relative">
-            <a href="#"><img src="./assets/drums/drum1.jpg" class="product-img" alt="piano photo"></a>
+            <a href="#"><img src="./assets/drums/drum5.jpg" class="product-img" alt="piano photo"></a>
             <a href="#">
               <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4 op-9">New</span>
               <span class="bottom right small position-absolute p-2 rounded bg-red text-light px-4 op-9">Paris</span>
@@ -776,7 +774,7 @@
         </div>
         <div class="product-card position-relative bg-product">
           <div class="product-img-container position-relative">
-            <a href="#"><img src="./assets/drums/drum1.jpg" class="product-img" alt="piano photo"></a>
+            <a href="#"><img src="./assets/drums/drum6.jpg" class="product-img" alt="piano photo"></a>
             <a href="#">
               <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4 op-9">New</span>
               <span class="bottom right small position-absolute p-2 rounded bg-red text-light px-4 op-9">Paris</span>
@@ -802,7 +800,7 @@
         </div>
         <div class="product-card position-relative bg-product">
           <div class="product-img-container position-relative">
-            <a href="#"><img src="./assets/drums/drum1.jpg" class="product-img" alt="piano photo"></a>
+            <a href="#"><img src="./assets/drums/drum7.jpg" class="product-img" alt="piano photo"></a>
             <a href="#">
               <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4 op-9">New</span>
               <span class="bottom right small position-absolute p-2 rounded bg-red text-light px-4 op-9">Paris</span>
@@ -828,7 +826,7 @@
         </div>
         <div class="product-card position-relative bg-product">
           <div class="product-img-container position-relative">
-            <a href="#"><img src="./assets/drums/drum1.jpg" class="product-img" alt="piano photo"></a>
+            <a href="#"><img src="./assets/drums/drum8.jpg" class="product-img" alt="piano photo"></a>
             <a href="#">
               <span class="top left position-absolute p-2 bg-charcoal rounded bg-red text-light px-4 op-9">New</span>
               <span class="bottom right small position-absolute p-2 rounded bg-red text-light px-4 op-9">Paris</span>
