sections:added padding for the section and the add svg

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       </div>
     </section>
     <!-- main products section -->
-    <section class="container-fluid p-lg-5 bg-light product-section">
+    <section class="container-fluid p-lg-5 bg-light product-section p-2">
       <div class="product-heading">
         <a href="#">
           <h2 class="grey font-weight-bolder text-center border-bottom m-3">Piano</h2>
@@ -407,7 +407,7 @@
 
 
     </section>
-    <section class="container-fluid p-lg-5 bg-light product-section">
+    <section class="container-fluid p-lg-5 bg-light product-section p-2">
       <div class="product-heading">
         <a href="#">
           <h2 class="grey font-weight-bolder text-center border-bottom m-3">Violin</h2>
@@ -634,7 +634,7 @@
       </div>
 
     </section>
-    <section class="container-fluid p-lg-5 bg-light product-section">
+    <section class="container-fluid p-lg-5 bg-light product-section p-2">
       <div class="product-heading">
         <a href="#">
           <h2 class="grey font-weight-bolder text-center border-bottom m-3">Drums</h2>
