font:addedd font family for the project

--- a/search.html
+++ b/search.html
@@ -13,6 +13,8 @@
   <!-- font awesome icons -->
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
     integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+  <!-- font family -->
+  <link rel="stylesheet" href="https://use.typekit.net/ykk6qjs.css" />
 </head>
 
 <body class="bg-body">
