carousel:h2 size fixed to 2.5rems and added margin top of 1rem

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     href="https://unsplash.com/s/photos/piano?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
 
               </div>
-              <div class="carousel-texts px-3">
+              <div class="carousel-texts mt-3 px-3">
                 <a href="">
                   <h2 class="red">PIANO.</h2>
                 </a>
@@ -125,7 +125,7 @@
                 <span class="sr-only">Photo by louis hansel</span>
 
               </div>
-              <div class="carousel-texts px-3">
+              <div class="carousel-texts  mt-3 px-3">
                 <a href="">
                   <h2 class="red">VIOLIN.</h2>
                 </a>
@@ -148,7 +148,7 @@
                 <img src="./assets/violins/violin7.jpg" alt="picture of piano category" class="carousel-img">
                 <span class="sr-only">Photo by chris bulilan</span>
               </div>
-              <div class="carousel-texts px-3">
+              <div class="carousel-texts  mt-3 px-3">
                 <a href="">
                   <h2 class="red">DRUMS.</h2>
                 </a>
