asset:piano and violin in the carousel updated

--- a/index.html
+++ b/index.html
@@ -89,13 +89,10 @@
               <div>
                 <div class="carousel-img">
                   <a href="">
-                    <img src="./assets/piano/piano-2.jpg" alt="picture of piano category" class="carousel-img">
+                    <img src="./assets/le-anh-khoa-Y-zG_VXKk7o-unsplash.jpg" alt="picture of piano category"
+                      class="carousel-img">
                   </a>
                 </div>
-                <span class="sr-only">Photo by <a
-                    href="https://unsplash.com/@migueldominguez?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Miguel
-                    Dominguez</a> on <a
-                    href="https://unsplash.com/s/photos/piano?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
 
               </div>
               <div class="carousel-texts mt-3 px-3">
@@ -119,7 +116,7 @@
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center">
               <div>
                 <a href="">
-                  <img src="./assets/violins/william-recinos-qtYhAQnIwSE-unsplash.jpg" alt="picture of piano category"
+                  <img src="./assets/violins/william-recinos-qtYhAQnIwSE-unsplash.jpg" alt="picture of violin category"
                     class="carousel-img">
                 </a>
                 <span class="sr-only">Photo by louis hansel</span>
@@ -145,7 +142,7 @@
           <div class="carousel-item text-center p-lg-3">
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center">
               <div>
-                <img src="./assets/violins/violin7.jpg" alt="picture of piano category" class="carousel-img">
+                <img src="./assets/drums/drum1.jpg" alt="picture of drums category" class="carousel-img">
                 <span class="sr-only">Photo by chris bulilan</span>
               </div>
               <div class="carousel-texts  mt-3 px-3">
