--- a/index.html
+++ b/index.html
@@ -71,11 +71,31 @@
     <div class="jumbotron mt-5 p-3 p-lg-3 mb-0 text-center">
       <h1 class="text-light mt-lg-5">ZATTIX</h1>
       <p class="text-light">Buying and Selling could not be simpler than this</p>
-      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 justify-content-center px-2 px-md-3 p-lg-0">
-        <input type="search" placeholder="What are you searching for ?"
-          class="border-light jumbotron-element text-center" />
-        <a href="search.html" class="btn btn-dark bg-charcoal text-light jumbotron-element">Search</a>
+
+      <!-- input groups -->
+
+      <div class="input-group mb-3">
+        <div class="d-grid g-c-4 w-100">
+          <!-- drop down -->
+          <div class="dropdown d-flex">
+            <button class="btn btn-secondary dropdown-toggle w-100" type="button" id="dropdownMenuButton"
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Dropdown button
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </div>
+
+          <!-- other inputs -->
+          <input type="search" placeholder="What are you searching for ?">
+          <input type="search" placeholder="What are you searching for ?">
+          <a href="search.html" class="btn btn-dark bg-charcoal text-light jumbotron-element">Search</a>
+        </div>
       </div>
+
     </div>
     <!-- carousel main - three main slides after header-->
     <section class="container-fluid my-2 m-0 p-0">
