inputs:gave class input-group for styling them

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <!-- input groups -->
 
       <div class="input-group mb-3">
-        <div class="d-grid g-c-4 w-100">
+        <div class="d-grid input-group">
           <!-- drop down -->
           <div class="dropdown d-flex">
             <button class="btn btn-secondary dropdown-toggle w-100" type="button" id="dropdownMenuButton"
