input:replaced bootstrap drop down with html select tag

--- a/index.html
+++ b/index.html
@@ -77,17 +77,11 @@
       <div class="input-group mb-3">
         <div class="d-grid input-group">
           <!-- drop down -->
-          <div class="dropdown d-flex">
-            <button class="btn btn-secondary dropdown-toggle w-100" type="button" id="dropdownMenuButton"
-              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Dropdown button
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </div>
+          <select name="category" class="drop-down">
+            <option value="Piano text-center">Piano</option>
+            <option value="Violin">Violin</option>
+            <option value="Drums">Drums</option>
+          </select>
 
           <!-- other inputs -->
           <input type="search" placeholder="What are you searching for ?">
