css:made button class general and removed colors from it

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <!-- other inputs -->
           <input type="search" placeholder="What are you searching for ?">
           <input type="search" placeholder="What are you searching for ?">
-          <a href="search.html" class="btn btn-dark bg-charcoal text-light jumbotron-element">Search</a>
+          <a href="search.html" class="button-charcoal btn-dark text-light jumbotron-element">Search</a>
         </div>
       </div>
 
@@ -120,7 +120,7 @@
                 <a href="">
                   <p class="check">Check out our awesome piano collection</p>
                 </a>
-                <button type="button" class="button">Explore</button>
+                <button type="button" class="button bg-red ">Explore</button>
               </div>
             </div>
           </div>
@@ -147,7 +147,7 @@
                 <a href="">
                   <p class="check">Check out our awesome violin collection</p>
                 </a>
-                <button type="button" class="button">Explore</button>
+                <button type="button" class="button bg-red">Explore</button>
               </div>
             </div>
           </div>
@@ -170,7 +170,7 @@
                 <a href="">
                   <p class="check"> Check out our awesome drums collection</p>
                 </a>
-                <button type="button" class="button">Explore</button>
+                <button type="button" class="button bg-red">Explore</button>
               </div>
             </div>
           </div>
