input:cards for the input groups for the same height and width and card styles

--- a/index.html
+++ b/index.html
@@ -75,18 +75,18 @@
       <!-- input groups -->
 
       <div class="input-group mb-3">
-        <div class="d-grid input-group">
+        <div class="d-grid input-group mt-3">
           <!-- drop down -->
-          <select name="category" class="drop-down">
+          <select name="category" class="drop-down rounded card">
             <option value="Piano text-center">Piano</option>
             <option value="Violin">Violin</option>
             <option value="Drums">Drums</option>
           </select>
 
           <!-- other inputs -->
-          <input type="search" placeholder="What are you searching for ?">
-          <input type="search" placeholder="What are you searching for ?">
-          <a href="search.html" class="button-charcoal btn-dark text-light jumbotron-element">Search</a>
+          <input type="search" placeholder="Location" class="rounded card">
+          <input type="search" placeholder="What are you searching for ?" class="rounded card">
+          <a href="search.html" class="button-charcoal btn-dark text-light rounded card">Search</a>
         </div>
       </div>
 
