input:charcoal background for the button in the input group

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <!-- other inputs -->
           <input type="search" placeholder="Location" class="rounded card">
           <input type="search" placeholder="What are you searching for ?" class="rounded card">
-          <a href="search.html" class="button-charcoal btn-dark text-light rounded card">Search</a>
+          <a href="search.html" class="button-charcoal btn-dark bg-charcoal text-light rounded card">Search</a>
         </div>
       </div>
 
