--- a/index.html
+++ b/index.html
@@ -77,16 +77,16 @@
       <div class="input-group mb-3">
         <div class="d-grid input-group mt-3">
           <!-- drop down -->
-          <select name="category" class="drop-down rounded card">
+          <select name="category" class="drop-down card">
             <option value="Piano text-center">Piano</option>
             <option value="Violin">Violin</option>
             <option value="Drums">Drums</option>
           </select>
 
           <!-- other inputs -->
-          <input type="search" placeholder="Location" class="rounded card">
-          <input type="search" placeholder="What are you searching for ?" class="rounded card">
-          <a href="search.html" class="button-charcoal btn-dark bg-charcoal text-light rounded card">Search</a>
+          <input type="search" placeholder="Location" class="card">
+          <input type="search" placeholder="What are you searching for ?" class="card">
+          <a href="search.html" class="button-charcoal btn-dark bg-charcoal text-light card">Search</a>
         </div>
       </div>
 
