fix:removed user data from the navbar as per original design

--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
       <div class="collapse navbar-collapse justify-content-between" id="navcol">
         <!-- nav bar center items -->
         <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link active" href="#"><i class="fa fa-home red"></i>&nbsp;<span
+          <li class="nav-item px-3"><a class="nav-link active" href="#"><i class="fa fa-home red"></i>&nbsp;<span
                 class="red">HOME</span></a></li>
-          <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown"
-              href="#"><i class="fa fa-th grey"></i>&nbsp;<span class="grey">Collections</span>&nbsp;</a>
+          <li class="nav-item dropdown px-2"><a class="dropdown-toggle nav-link" aria-expanded="false"
+              data-toggle="dropdown" href="#"><i class="fa fa-th grey"></i>&nbsp;<span
+                class="grey">Collections</span>&nbsp;</a>
             <!-- drop down items in collectons -->
             <div class="dropdown-menu bg-secondary">
               <a class="dropdown-item" href="#">Piano</a>
@@ -41,7 +42,7 @@
               <a class="dropdown-item" href="#">Drums</a>
             </div>
           </li>
-          <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-shopping-cart grey pr-1"></i><span
+          <li class="nav-item px-2"><a class="nav-link" href="#"><i class="fa fa-shopping-cart grey pr-1"></i><span
                 class="grey">PURCHASE LIST</span></a>
           </li>
         </ul>
@@ -49,20 +50,7 @@
           class="py-1 mt-3 px-5 px-md-2 px-lg-5 py-lg-2 m-0 ml-lg-4 my-sm-2 rounded border-0 bg-red text-light">POST
           AN
           AD</button>
-        <!-- navbar end items -->
-        <div class="user d-flex flex-row align-items-center d-flex align-items-center px-0 px-md-2">
-          <div class=" mt-4 mt-md-0 flex-nowrap">
-            <a href="#">
-              <picture class="mx-1"><img src="assets/samrood.jpg" alt="user image photo"></picture>
-            </a>
-            <a href="#">
-              <span class="navbar-text text-light">Sam
-              </span>
-            </a>
-            <a href="#"><i class="fa fa-envelope align-self-center text-light mx-2"></i></a>
-            <!-- my picture as user -->
-          </div>
-        </div>
+
       </div>
     </nav>
   </header>
