--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <!-- navbar top -->
     <nav
       class="navbar navbar-light navbar-expand-md d-md-flex align-items-md-center bg-charcoal fixed-top w-100 p-2 p-md-1 w-100">
-      <a class="navbar-brand px-md-4 px-lg-5" href="#"><i class="fa fa-shopping-basket red mr-2"></i><span
-          class="text-light mr-1 mr-lg-5">ZATTIX</span></a>
+      <a class="navbar-brand px-md-4 px-lg-5" href="#"><img src="./assets/nav-logo.svg" alt="nav company logo zattix"
+          class="nav-logo"><span class="text-light mr-1 mr-lg-5">ZATTIX</span></a>
       <!-- toggle button -->
       <button type="button" data-toggle="collapse" class="navbar-toggler" data-target="#navcol"><span
           class="sr-only">Toggle
