nav:fixed button on nav margin top issue

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <!-- navbar top -->
     <nav
       class="navbar navbar-light navbar-expand-md d-md-flex align-items-md-center bg-charcoal fixed-top w-100 p-2 p-md-1 w-100">
-      <a class="navbar-brand px-3 px-md-4 px-lg-5" href="#"><img src="./assets/nav-logo.svg"
-          alt="nav company logo zattix" class="nav-logo"><span class="text-light mx-3 mr-lg-5">ZATTIX</span></a>
+      <a class="navbar-brand px-3 px-lg-5" href="#"><img src="./assets/nav-logo.svg" alt="nav company logo zattix"
+          class="nav-logo"><span class="text-light mx-3 mr-lg-5">ZATTIX</span></a>
       <!-- toggle button -->
       <button type="button" data-toggle="collapse" class="navbar-toggler" data-target="#navcol"><span
           class="sr-only">Toggle
@@ -30,9 +30,9 @@
       <div class="collapse navbar-collapse justify-content-between" id="navcol">
         <!-- nav bar center items -->
         <ul class="navbar-nav">
-          <li class="nav-item px-3"><a class="nav-link active" href="#"><i class="fa fa-home red"></i>&nbsp;<span
+          <li class="nav-item px-md-3"><a class="nav-link active" href="#"><i class="fa fa-home red"></i>&nbsp;<span
                 class="red">HOME</span></a></li>
-          <li class="nav-item dropdown px-2"><a class="dropdown-toggle nav-link" aria-expanded="false"
+          <li class="nav-item dropdown px-md-2"><a class="dropdown-toggle nav-link" aria-expanded="false"
               data-toggle="dropdown" href="#"><i class="fa fa-th grey"></i>&nbsp;<span
                 class="grey">Collections</span>&nbsp;</a>
             <!-- drop down items in collectons -->
@@ -42,12 +42,11 @@
               <a class="dropdown-item" href="#">Drums</a>
             </div>
           </li>
-          <li class="nav-item px-2"><a class="nav-link" href="#"><i class="fa fa-shopping-cart grey pr-1"></i><span
+          <li class="nav-item px-md-1"><a class="nav-link" href="#"><i class="fa fa-shopping-cart grey pr-1"></i><span
                 class="grey">PURCHASE LIST</span></a>
           </li>
         </ul>
-        <button type="button"
-          class="py-1 mt-3 px-5 px-md-2 px-lg-5 py-lg-2 m-0 ml-lg-4 my-sm-2 rounded border-0 bg-red text-light">POST
+        <button type="button" class="py-1 px-3 mx-md-1 px-lg-5 m-0 ml-lg-4 rounded border-0 bg-red text-light">POST
           AN
           AD</button>
 
