nav:more padding for the button on lg screens

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="collapse navbar-collapse justify-content-between" id="navcol">
         <!-- nav bar center items -->
         <ul class="navbar-nav">
-          <li class="nav-item px-md-3"><a class="nav-link active" href="#"><i class="fa fa-home red"></i>&nbsp;<span
+          <li class="nav-item px-md-4"><a class="nav-link active" href="#"><i class="fa fa-home red"></i>&nbsp;<span
                 class="red">HOME</span></a></li>
           <li class="nav-item dropdown px-md-2"><a class="dropdown-toggle nav-link" aria-expanded="false"
               data-toggle="dropdown" href="#"><i class="fa fa-th grey"></i>&nbsp;<span
@@ -46,7 +46,8 @@
                 class="grey">PURCHASE LIST</span></a>
           </li>
         </ul>
-        <button type="button" class="py-1 px-3 mx-md-1 px-lg-5 m-0 ml-lg-4 rounded border-0 bg-red text-light">POST
+        <button type="button"
+          class="py-1 px-3 mx-md-1 px-lg-5 m-0 ml-lg-4 rounded border-0 bg-red text-light mr-lg-3 p-lg-2">POST
           AN
           AD</button>
 
