--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- navbar top -->
     <nav
       class="navbar navbar-light navbar-expand-md d-md-flex align-items-md-center bg-charcoal fixed-top w-100 p-2 p-md-1 w-100">
-      <a class="navbar-brand px-2 px-lg-5" href="#"><img src="./assets/nav-logo.svg" alt="nav company logo zattix"
+      <a class="navbar-brand px-2 px-lg-3" href="#"><img src="./assets/nav-logo.svg" alt="nav company logo zattix"
           class="nav-logo"><span class="text-light mx-3 mr-lg-5">ZATTIX</span></a>
       <!-- toggle button -->
       <button type="button" data-toggle="collapse" class="navbar-toggler" data-target="#navcol"><span
@@ -30,10 +30,10 @@
       <div class="collapse navbar-collapse justify-content-between" id="navcol">
         <!-- nav bar center items -->
         <ul class="navbar-nav">
-          <li class="nav-item px-md-4"><a class="nav-link active" href="#"><i class="fa fa-home red"></i>&nbsp;<span
-                class="red">HOME</span></a></li>
-          <li class="nav-item dropdown px-md-2"><a class="dropdown-toggle nav-link" aria-expanded="false"
-              data-toggle="dropdown" href="#"><i class="fa fa-th grey"></i>&nbsp;<span
+          <li class="nav-item px-md-4  mx-xl-5  mx-lg-3"><a class="nav-link active" href="#"><i
+                class="fa fa-home red"></i>&nbsp;<span class="red">HOME</span></a></li>
+          <li class="nav-item dropdown px-md-2 mx-lg-2  mx-xl-5"><a class="dropdown-toggle nav-link"
+              aria-expanded="false" data-toggle="dropdown" href="#"><i class="fa fa-th grey  mx-lg-3"></i>&nbsp;<span
                 class="grey">Collections</span>&nbsp;</a>
             <!-- drop down items in collectons -->
             <div class="dropdown-menu bg-secondary">
@@ -42,8 +42,8 @@
               <a class="dropdown-item" href="#">Drums</a>
             </div>
           </li>
-          <li class="nav-item px-md-1"><a class="nav-link" href="#"><i class="fa fa-shopping-cart grey pr-1"></i><span
-                class="grey">PURCHASE LIST</span></a>
+          <li class="nav-item px-md-1 mx-lg-2 mx-xl-5"><a class="nav-link" href="#"><i
+                class="fa fa-shopping-cart grey pr-1"></i><span class="grey">PURCHASE LIST</span></a>
           </li>
         </ul>
         <button type="button"
