--- a/search.html
+++ b/search.html
@@ -21,9 +21,9 @@
   <header class="container-fluid">
     <!-- navbar top -->
     <nav
-      class="navbar navbar-light navbar-expand-md d-md-flex align-items-md-center bg-charcoal fixed-top w-100 p-2 p-md-1 p-lg-2 w-100">
-      <a class="navbar-brand" href="#"><i class="fa fa-shopping-basket red mr-2"></i><span
-          class="text-light mr-1 mr-lg-5">ZATTIX</span></a>
+      class="navbar navbar-light navbar-expand-md d-md-flex align-items-md-center bg-charcoal fixed-top w-100 p-2 p-md-1 w-100">
+      <a class="navbar-brand px-2 px-lg-3" href="#"><img src="./assets/nav-logo.svg" alt="nav company logo zattix"
+          class="nav-logo"><span class="text-light mx-3 mr-lg-5">ZATTIX</span></a>
       <!-- toggle button -->
       <button type="button" data-toggle="collapse" class="navbar-toggler" data-target="#navcol"><span
           class="sr-only">Toggle
@@ -32,10 +32,11 @@
       <div class="collapse navbar-collapse justify-content-between" id="navcol">
         <!-- nav bar center items -->
         <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link active" href="index.html"><i class="fa fa-home red"></i>&nbsp;<span
-                class="red">HOME</span></a></li>
-          <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown"
-              href="#"><i class="fa fa-th grey"></i>&nbsp;<span class="grey">Collections</span>&nbsp;</a>
+          <li class="nav-item px-md-4  mx-xl-5  mx-lg-3"><a class="nav-link active" href="#"><i
+                class="fa fa-home red"></i>&nbsp;<span class="red">HOME</span></a></li>
+          <li class="nav-item dropdown px-md-2 mx-lg-2  mx-xl-5"><a class="dropdown-toggle nav-link"
+              aria-expanded="false" data-toggle="dropdown" href="#"><i class="fa fa-th grey  mx-lg-3"></i>&nbsp;<span
+                class="grey">Collections</span>&nbsp;</a>
             <!-- drop down items in collectons -->
             <div class="dropdown-menu bg-secondary">
               <a class="dropdown-item" href="#">Piano</a>
@@ -43,28 +44,15 @@
               <a class="dropdown-item" href="#">Drums</a>
             </div>
           </li>
-          <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-shopping-cart grey pr-1"></i><span
-                class="grey">PURCHASE LIST</span></a>
+          <li class="nav-item px-md-1 mx-lg-2 mx-xl-5"><a class="nav-link" href="#"><i
+                class="fa fa-shopping-cart grey pr-1"></i><span class="grey">PURCHASE LIST</span></a>
           </li>
         </ul>
         <button type="button"
-          class="py-1 mt-3 px-5 px-md-2 px-lg-5 py-lg-2 m-0 ml-lg-4 my-sm-2 rounded border-0 bg-red text-light">POST
+          class="py-1 px-3 mx-md-1 px-lg-5 m-0 ml-lg-4 rounded border-0 bg-red text-light mr-lg-3 p-lg-2">POST
           AN
           AD</button>
-        <!-- navbar end items -->
-        <div class="user d-flex flex-row align-items-center d-flex align-items-center px-0 px-md-2">
-          <div class=" mt-4 mt-md-0 flex-nowrap">
-            <a href="#">
-              <picture class="mx-1"><img src="assets/samrood.jpg" alt="user image photo"></picture>
-            </a>
-            <a href="#">
-              <span class="navbar-text text-light">Sam
-              </span>
-            </a>
-            <a href="#"><i class="fa fa-envelope align-self-center text-light mx-2"></i></a>
-            <!-- my picture as user -->
-          </div>
-        </div>
+
       </div>
     </nav>
   </header>
